@@ -75,6 +75,9 @@ Debug:
 Recovery:
 * scan for records in chunk free space
 
+20140323
+* worked on Python-bindings
+
 20140317
 * updated dependencies
 * worked on setup.py
